fixed header overlap

--- a/src/index.css
+++ b/src/index.css
@@ -36,7 +36,7 @@ body {
 
 h1 {
   font-size: 3.2em;
-  line-height: 0.5;
+  line-height: 1;
   font-family: 'Abril Fatface', serif;
 }
 
@@ -200,4 +200,5 @@ color: #dfe6a8;
   .website img {
     width: 100%;
   }
+  
 }
